--- a/index.html
+++ b/index.html
@@ -6,19 +6,32 @@
   line-height: 50px; 
   word-wrap: anywhere; 
   }
+  .club {
+   background-color: hsl(201, 100%, 93%); 
+  }
 </style>
 
 <body></body>
 
 <script> 
   for (let i= 0;i<1000;i++) {
+    let cardSymbol = '';
+    let cardClass = '';
     if (0.01 < Math.random()< 0.25) {
+      cardSymbol = '♣';
+      cardClass = 'club';
       document.body.innerText += '♣'
     } else if (0.25 < Math.random() < 0.5){
+      cardSymbol = '♥';
+      cardClass = 'heart';
       document.body.innerText += '♥'
     } else if (0.5 < Math.random() < 0.75){
+      cardSymbol = '♠';
+      cardClass = 'spade';
       document.body.innerText += '♠'
     } else if (Math.random() > 0.75){
+      cardSymbol = '♦';
+      cardClass = 'diamond';
       document.body.innerText += '♦'
     }
   }
